edit product page to load ajax and caching product & category

--- a/main-page/views/layout.ejs
+++ b/main-page/views/layout.ejs
@@ -1,177 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>Daily Shop</title>
-    <!-- Font awesome -->
-    <link href="/stylesheets/font-awesome.css" rel="stylesheet">
-    <!-- Bootstrap -->
-    <link href="/stylesheets/bootstrap.css" rel="stylesheet">   
-    <!-- SmartMenus jQuery Bootstrap Addon CSS -->
-    <link href="/stylesheets/jquery.smartmenus.bootstrap.css" rel="stylesheet">
-    <!-- Product view slider -->
-    <link rel="stylesheet" type="text/css" href="/stylesheets/jquery.simpleLens.css">    
-    <!-- slick slider -->
-    <link rel="stylesheet" type="text/css" href="/stylesheets/slick.css">
-    <!-- price picker slider -->
-    <link rel="stylesheet" type="text/css" href="/stylesheets/nouislider.css">
-    <!-- Theme color -->
-    <link id="switcher" href="/stylesheets/theme-color/default-theme.css" rel="stylesheet">
-    <!-- <link id="switcher" href="css/theme-color/bridge-theme.css" rel="stylesheet"> -->
-    <!-- Top Slider CSS -->
-    <link href="/stylesheets/sequence-theme.modern-slide-in.css" rel="stylesheet" media="all">
 
-    <!-- Main style sheet -->
-    <link href="/stylesheets/style.css" rel="stylesheet">    
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Daily Shop</title>
+  <!-- Font awesome -->
+  <link href="/stylesheets/font-awesome.css" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link href="/stylesheets/bootstrap.css" rel="stylesheet">
+  <!-- SmartMenus jQuery Bootstrap Addon CSS -->
+  <link href="/stylesheets/jquery.smartmenus.bootstrap.css" rel="stylesheet">
+  <!-- Product view slider -->
+  <link rel="stylesheet" type="text/css" href="/stylesheets/jquery.simpleLens.css">
+  <!-- slick slider -->
+  <link rel="stylesheet" type="text/css" href="/stylesheets/slick.css">
+  <!-- price picker slider -->
+  <link rel="stylesheet" type="text/css" href="/stylesheets/nouislider.css">
+  <!-- Theme color -->
+  <link id="switcher" href="/stylesheets/theme-color/default-theme.css" rel="stylesheet">
+  <!-- <link id="switcher" href="css/theme-color/bridge-theme.css" rel="stylesheet"> -->
+  <!-- Top Slider CSS -->
+  <link href="/stylesheets/sequence-theme.modern-slide-in.css" rel="stylesheet" media="all">
 
-    <!-- Google Font -->
-    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <!-- Main style sheet -->
+  <link href="/stylesheets/style.css" rel="stylesheet">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    
+  <!-- Google Font -->
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  
 
-  </head>
-  <body> 
-   <!-- wpf loader Two -->
-    <div id="wpf-loader-two">          
-      <div class="wpf-loader-two-inner">
-        <span>Loading</span>
-      </div>
-    </div> 
-    <!-- / wpf loader Two -->       
+
+</head>
+
+<body>
+  <!-- wpf loader Two -->
+  <div id="wpf-loader-two">
+    <div class="wpf-loader-two-inner">
+      <span>Loading</span>
+    </div>
+  </div>
+  <!-- / wpf loader Two -->
   <!-- SCROLL TOP BUTTON -->
-    <a class="scrollToTop" href="#"><i class="fa fa-chevron-up"></i></a>
+  <a class="scrollToTop" href="#"><i class="fa fa-chevron-up"></i></a>
   <!-- END SCROLL TOP BUTTON -->
 
   <header id="aa-header">
-      <!-- start header top  -->
-      <div class="aa-header-top">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="aa-header-top-area">
-                <!-- start header top left -->
-                <div class="aa-header-top-left">
-                  
-                  <!-- start cellphone -->
-                  <div class="cellphone hidden-xs">
-                    <p><span class="fa fa-phone"></span>(028) 7307 1441</p>
-                  </div>
-                  <!-- / cellphone -->
+    <!-- start header top  -->
+    <div class="aa-header-top">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="aa-header-top-area">
+              <!-- start header top left -->
+              <div class="aa-header-top-left">
+
+                <!-- start cellphone -->
+                <div class="cellphone hidden-xs">
+                  <p><span class="fa fa-phone"></span>(028) 7307 1441</p>
                 </div>
-                <!-- / header top left -->
-                <div class="aa-header-top-right">
-                  <ul class="aa-head-top-nav-right">
-                    <!--<li><a href="/user/detailUser?id=1">Tài khoản của tôi</a></li>
+                <!-- / cellphone -->
+              </div>
+              <!-- / header top left -->
+              <div class="aa-header-top-right">
+                <ul class="aa-head-top-nav-right">
+                  <!--<li><a href="/user/detailUser?id=1">Tài khoản của tôi</a></li>
                     <li><a href="/order/list">Đơn hàng của tôi</a></li>-->
-                    <li class="hidden-xs"><a href="/my-cart">Giỏ hàng</a></li>
-                    <li class="hidden-xs"><a href="/check-out">Thanh toán</a></li>
-                    <%if (typeof user == 'undefined') { %>
-                      <li><a href="" data-toggle="modal" data-target="#login-modal">Đăng nhập</a></li>
-                      <% }
+                  <li class="hidden-xs"><a href="/my-cart">Giỏ hàng</a></li>
+                  <li class="hidden-xs"><a href="/check-out">Thanh toán</a></li>
+                  <%if (typeof user == 'undefined') { %>
+                  <li><a href="" data-toggle="modal" data-target="#login-modal">Đăng nhập</a></li>
+                  <% }
                       else { %>
-                         <% if (user!==null) {%><li><a href="/user/detailUser" >Hi, <%=user.displayName%></a></li><%}
+                  <% if (user!==null) {%><li><a href="/user/detailUser">Hi, <%=user.displayName%></a></li><%}
                             else {%> <li><a href="" data-toggle="modal" data-target="#login-modal">Đăng nhập</a></li><%}
                           %>
-                      <%} %>
-                
-                  
-                    
-                  </ul>
-                </div>
+                  <%} %>
+
+
+
+                </ul>
               </div>
             </div>
           </div>
         </div>
       </div>
-
-
-  <% include ./common/header %>
-
-
-  <!-- menu -->
-<section id="menu">
-    <div class="container">
-      <div class="menu-area">
-        <!-- Navbar -->
-        <div class="navbar navbar-default" role="navigation">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>          
-          </div>
-          <div class="navbar-collapse collapse">
-            <!-- Left nav -->
-            <ul class="nav navbar-nav">
-              <li><a href="/">Trang chủ</a></li>
-              <%
-                listCategory.forEach(category=>{
-                  %><li>
-                    <a href="/products/type?id=<%= category['Id'] %>" ><%= category['name'] %></a>
-                  </li><%
-                });
-              %>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>       
     </div>
-  </section>
-  <!-- / menu -->
-  <%- body %>
-   
 
 
-  <!-- footer -->  
-  <footer id="aa-footer">
-    <!-- footer bottom -->
-    <div class="aa-footer-top">
-     <div class="container">
-        <div class="row">
-        <div class="col-md-12">
-          <div class="aa-footer-top-area">
-            <div class="row">
-              <div class="col-md-6 col-sm-12">
-                <div class="aa-footer-widget">
-                  <div class="aa-subscribe-area">
-                    <h3>Theo dõi để nhận thông tin mới nhất </h3>
-                    <p>Vui lòng để lại Email để nhận được tin mới nhất từ chúng tôi.</p>
-                    <form action="" class="aa-subscribe-form">
-                      <input type="email" name="" id="" placeholder="Nhập Email của bạn...">
-                      <input type="submit" value="Subscribe">
-                    </form>
+    <% include ./common/header %>
+
+
+    <!-- menu -->
+    <section id="menu">
+      <div class="container">
+        <div class="menu-area">
+          <!-- Navbar -->
+          <div class="navbar navbar-default" role="navigation">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+            </div>
+            <div class="navbar-collapse collapse">
+              <!-- Left nav -->
+              <ul class="nav navbar-nav">
+                <li><a href="/">Trang chủ</a></li>
+
+                <%if (typeof listCategory != 'undefined') { 
+                 listCategory.forEach(category=>{
+                %><li>
+                  <a href="/products/type?id=<%= category['Id'] %>"><%= category['name'] %></a>
+                </li><%})}%>
+
+              </ul>
+            </div>
+            <!--/.nav-collapse -->
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- / menu -->
+    <%- body %>
+
+
+
+    <!-- footer -->
+    <footer id="aa-footer">
+      <!-- footer bottom -->
+      <div class="aa-footer-top">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="aa-footer-top-area">
+                <div class="row">
+                  <div class="col-md-6 col-sm-12">
+                    <div class="aa-footer-widget">
+                      <div class="aa-subscribe-area">
+                        <h3>Theo dõi để nhận thông tin mới nhất </h3>
+                        <p>Vui lòng để lại Email để nhận được tin mới nhất từ chúng tôi.</p>
+                        <form action="" class="aa-subscribe-form">
+                          <input type="email" name="" id="" placeholder="Nhập Email của bạn...">
+                          <input type="submit" value="Subscribe">
+                        </form>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </div>
-              <div class="col-md-6 col-sm-12">
-                <div class="aa-footer-widget">
-                  <div class="aa-footer-widget">
-                    <h3>Liên hệ</h3>
-                    <address>
-                      <p> 102 Nguyễn Văn Cừ Q.5 TP.HCM</p>
-                      <p><span class="fa fa-phone"></span> (028) 7307 1441</p>
-                      <p><span class="fa fa-envelope"></span>dailyshop@gmail.com</p>
-                    </address>
-                    <div class="aa-footer-social">
-                      <a href="#"><span class="fa fa-facebook"></span></a>
-                      <a href="#"><span class="fa fa-twitter"></span></a>
-                      <a href="#"><span class="fa fa-google-plus"></span></a>
-                      <a href="#"><span class="fa fa-youtube"></span></a>
+                  <div class="col-md-6 col-sm-12">
+                    <div class="aa-footer-widget">
+                      <div class="aa-footer-widget">
+                        <h3>Liên hệ</h3>
+                        <address>
+                          <p> 102 Nguyễn Văn Cừ Q.5 TP.HCM</p>
+                          <p><span class="fa fa-phone"></span> (028) 7307 1441</p>
+                          <p><span class="fa fa-envelope"></span>dailyshop@gmail.com</p>
+                        </address>
+                        <div class="aa-footer-social">
+                          <a href="#"><span class="fa fa-facebook"></span></a>
+                          <a href="#"><span class="fa fa-twitter"></span></a>
+                          <a href="#"><span class="fa fa-google-plus"></span></a>
+                          <a href="#"><span class="fa fa-youtube"></span></a>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -180,16 +185,15 @@
           </div>
         </div>
       </div>
-     </div>
-    </div>
-  </footer>
-  <!-- / footer -->
-   <!-- Login Modal -->  
-   <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    </footer>
+    <!-- / footer -->
+    <!-- Login Modal -->
+    <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+      aria-hidden="true">
       <div class="modal-dialog">
-        <div class="modal-content">                      
+        <div class="modal-content">
           <div class="modal-body">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             <h4>Đăng nhập/Đăng kí</h4>
             <form class="aa-login-form" action="/user/login" method="POST">
               <label for="">Tài khoản hoặc Email<span>*</span></label>
@@ -197,53 +201,58 @@
               <label for="">Mật khẩu<span>*</span></label>
               <input type="password" name="password" placeholder="Password">
               <button class="aa-browse-btn" type="submit" value="submit">Đăng nhập</button>
-              <label for="rememberme" class="rememberme"><input type="checkbox" id="rememberme"> Ghi nhớ </label>
-              <p class="aa-lost-password"><a href="" data-toggle="modal" data-target="#forgot-password-modal" data-dismiss="modal" >Quên mật khẩu?</a></p>
-  
+              <label for="rememberme" class="rememberme"><input type="checkbox" id="rememberme"> Ghi nhớ
+              </label>
+              <p class="aa-lost-password"><a href="" data-toggle="modal" data-target="#forgot-password-modal"
+                  data-dismiss="modal">Quên mật khẩu?</a></p>
+
               <div class="aa-register-now">
                 Bạn chưa có tài khoản?<a href="/user/createUser">Đăng kí ngay!</a>
               </div>
             </form>
-          </div>                        
+          </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
-    </div>    
-    <div class="modal fade" id="forgot-password-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    </div>
+    <div class="modal fade" id="forgot-password-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+      aria-hidden="true">
       <div class="modal-dialog">
-        <div class="modal-content">                      
+        <div class="modal-content">
           <div class="modal-body">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             <h4>Xác minh tài khoản</h4>
             <form class="aa-login-form" action="/user/reset" method="POST">
               <label for="">Email<span>*</span></label>
               <input type="text" id="email" name="email" placeholder="Email">
-              <button class="aa-browse-btn" data-dismiss="modal" type="submit" value="submit">Xác minh</button>
+              <button class="aa-browse-btn" data-dismiss="modal" type="submit" value="submit">Xác
+                minh</button>
             </form>
-          </div>                        
+          </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
-    </div>  
+    </div>
 
- 
 
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="/js/bootstrap.js"></script>  
-  <!-- SmartMenus jQuery plugin -->
-  <script type="text/javascript" src="/js/jquery.smartmenus.js"></script>
-  <!-- SmartMenus jQuery Bootstrap Addon -->
-  <script type="text/javascript" src="/js/jquery.smartmenus.bootstrap.js"></script>  
 
-  <!-- Product view slider -->
-  <script type="text/javascript" src="/js/jquery.simpleGallery.js"></script>
-  <script type="text/javascript" src="/js/jquery.simpleLens.js"></script>
-  <!-- slick slider -->
-  <script type="text/javascript" src="/js/slick.js"></script>
-  <!-- Price picker slider -->
-  <script type="text/javascript" src="/js/nouislider.js"></script>
-  <!-- Custom js -->
-  <script src="/js/custom.js"></script> 
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="/js/bootstrap.js"></script>
+    <!-- SmartMenus jQuery plugin -->
+    <script type="text/javascript" src="/js/jquery.smartmenus.js"></script>
+    <!-- SmartMenus jQuery Bootstrap Addon -->
+    <script type="text/javascript" src="/js/jquery.smartmenus.bootstrap.js"></script>
 
-  </body>
+    <!-- Product view slider -->
+    <script type="text/javascript" src="/js/jquery.simpleGallery.js"></script>
+    <script type="text/javascript" src="/js/jquery.simpleLens.js"></script>
+    <!-- slick slider -->
+    <script type="text/javascript" src="/js/slick.js"></script>
+    <!-- Price picker slider -->
+    <script type="text/javascript" src="/js/nouislider.js"></script>
+    <!-- Custom js -->
+    <script src="/js/custom.js"></script>
+
+</body>
+
 </html>
