--- a/main-page/views/user/account_detail.ejs
+++ b/main-page/views/user/account_detail.ejs
@@ -31,8 +31,8 @@
                     <div class="row">
                         <h4 class="col-sm-6 col-md-6">Thông tin cá nhân</h4>
                         <div class="aa-register-now  col-sm-6 col-md-6" >
-                            <a href="/user/update">Thay đổi thông tin cá nhân ?</a>
-                            <a href="/user/updatePassword">Thay đổi mật khẩu ?</a>
+                            <a href="/user/update" class="row">Thay đổi thông tin cá nhân ?</a>
+                            <a href="/user/updatePassword" class="row" >Thay đổi mật khẩu ?</a>
                         </div>
                     </div>
                     
